#TASK - 完成基本架構 可互傳msg VOICE_QUEUE

--- a/ChannelForSimulation/src/main/resources/application.properties
+++ b/ChannelForSimulation/src/main/resources/application.properties
@@ -12,3 +12,6 @@ mapProp.server_hostname: yourHostname.com
 mapProp.server_port: 8080
 mapProp.server_project: yourProjectName
 
+mapProp.entityTypeID: 1
+mapProp.queueName: BACKEND_TO_VOICE_QUEUE
+
