--- a/ChannelForSimulation/pom.xml
+++ b/ChannelForSimulation/pom.xml
@@ -144,6 +144,12 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- spring boot RabbitMQ 1 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>		
 
 
 		<!-- JSP - JSTL -->
@@ -166,6 +172,22 @@
 			<version>4.6.1</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- biMap -->
+		<!-- https://mvnrepository.com/artifact/com.google.collections/google-collections -->
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0-rc2</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
