#TASK - config新增 project名稱

--- a/ChannelForSimulation/src/main/resources/application.properties
+++ b/ChannelForSimulation/src/main/resources/application.properties
@@ -2,26 +2,26 @@
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 
-projectName: YourProjectName
+projectName: ChannelForSimulation
 version: v1.0.0
 
 server.port = 9009
 
-mapProp.server_protocol: http
-mapProp.server_hostname: yourHostname.com
-mapProp.server_port: 8080
-mapProp.server_project: yourProjectName
+mapProp.server_protocol:http
+mapProp.server_hostname:ws.crm.com.tw
+mapProp.server_port:8080
+mapProp.server_project=ChannelForSimulation
 
 mapProp.entityTypeID: 1
 mapProp.queueName: BACKEND_TO_VOICE_QUEUE
 
 ## Info360WebAPI ##
 mapProp.RESTful_protocol=http:
-mapProp.RESTful_hostname=localhost
+mapProp.RESTful_hostname=ws.crm.com.tw
 mapProp.RESTful_port=8080
-mapProp.RESTful_project=/Info360WebAPI
+mapProp.RESTful_project=Info360WebAPI
 
 ## rabbitmq server ##
-rabbitmq-hostname=localhost
+rabbitmq-hostname=ws.crm.com.tw
 rabbitmq-username=service@crm.com.tw
 rabbitmq-password=info@1111
