#TASK - 新增spring-boot-devtools

--- a/ChannelForSimulation/pom.xml
+++ b/ChannelForSimulation/pom.xml
@@ -187,7 +187,13 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.0</version>
 		</dependency>
-
+		
+		<!-- Developer tools -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+		    <optional>true</optional>
+		</dependency>
 
 	</dependencies>
 
