#TASK - 新增loginVoice, logoutvoice兩事件請求

--- a/ChannelForSimulation/src/main/resources/127_132_application.properties
+++ b/ChannelForSimulation/src/main/resources/127_132_application.properties
@@ -17,11 +17,11 @@ mapProp.queueName: BACKEND_TO_VOICE_QUEUE
 
 ## Info360WebAPI ##
 mapProp.RESTful_protocol=http
-mapProp.RESTful_hostname=ws.crm.com.tw
+mapProp.RESTful_hostname=192.168.10.132
 mapProp.RESTful_port=8080
 mapProp.RESTful_project=Info360WebAPI
 
 ## rabbitmq server ##
-rabbitmq-hostname=ws.crm.com.tw
+rabbitmq-hostname=192.168.10.132
 rabbitmq-username=service@crm.com.tw
 rabbitmq-password=info@1111
