--- a/ChannelForSimulation/src/main/resources/132_application.properties
+++ b/ChannelForSimulation/src/main/resources/132_application.properties
@@ -16,7 +16,7 @@ mapProp.entityTypeID: 1
 mapProp.queueName: BACKEND_TO_VOICE_QUEUE
 
 ## Info360WebAPI ##
-mapProp.RESTful_protocol=http:
+mapProp.RESTful_protocol=http
 mapProp.RESTful_hostname=192.168.10.132
 mapProp.RESTful_port=8080
 mapProp.RESTful_project=Info360WebAPI
