--- a/ChannelForSimulation/src/main/resources/61_application.properties
+++ b/ChannelForSimulation/src/main/resources/61_application.properties
@@ -8,8 +8,8 @@ version: v1.0.0
 server.port = 9009
 
 mapProp.server_protocol:http
-mapProp.server_hostname:localhost
-mapProp.server_port:9009
+mapProp.server_hostname:demo.crm.com.tw
+mapProp.server_port:8080
 mapProp.server_project=ChannelForSimulation
 
 mapProp.entityTypeID: 1
@@ -17,11 +17,11 @@ mapProp.queueName: BACKEND_TO_VOICE_QUEUE
 
 ## Info360WebAPI ##
 mapProp.RESTful_protocol=http
-mapProp.RESTful_hostname=localhost
+mapProp.RESTful_hostname=demo.crm.com.tw
 mapProp.RESTful_port=8080
 mapProp.RESTful_project=Info360WebAPI
 
 ## rabbitmq server ##
-rabbitmq-hostname=localhost
+rabbitmq-hostname=demo.crm.com.tw
 rabbitmq-username=service@crm.com.tw
 rabbitmq-password=info@1111
