#TASK - 完成 queue consumer 連線數顯示

--- a/ChannelForSimulation/src/main/resources/application.properties
+++ b/ChannelForSimulation/src/main/resources/application.properties
@@ -7,6 +7,7 @@ version: v1.0.0
 
 server.port = 9009
 
+## for page only - can detach from server
 mapProp.server_protocol:http
 mapProp.server_hostname:localhost
 mapProp.server_port:9009
@@ -14,6 +15,12 @@ mapProp.server_project=ChannelForSimulation
 
 mapProp.entityTypeID: 1
 mapProp.queueName: BACKEND_TO_VOICE_QUEUE
+
+## BACKEND ##
+mapProp.BACKEND_protocol=http
+mapProp.BACKEND_hostname=localhost
+mapProp.BACKEND_port=8080
+mapProp.BACKEND_project=BackendService
 
 ## Info360WebAPI ##
 mapProp.RESTful_protocol=http
