--- a/ChannelForSimulation/src/main/resources/127_application.properties
+++ b/ChannelForSimulation/src/main/resources/127_application.properties
@@ -9,7 +9,7 @@ server.port = 9009
 
 ## for page only - can detach from server
 mapProp.server_protocol:http
-mapProp.server_hostname:192.168.10.126
+mapProp.server_hostname:localhost
 mapProp.server_port:9009
 mapProp.server_project=ChannelForSimulation
 
@@ -18,17 +18,17 @@ mapProp.queueName: BACKEND_TO_VOICE_QUEUE
 
 ## BACKEND ##
 mapProp.BACKEND_protocol=http
-mapProp.BACKEND_hostname=192.168.10.126
+mapProp.BACKEND_hostname=localhost
 mapProp.BACKEND_port=8080
 mapProp.BACKEND_project=BackendService
 
 ## Info360WebAPI ##
 mapProp.RESTful_protocol=http
-mapProp.RESTful_hostname=192.168.10.126
+mapProp.RESTful_hostname=localhost
 mapProp.RESTful_port=8080
 mapProp.RESTful_project=Info360WebAPI
 
 ## rabbitmq server ##
-rabbitmq-hostname=192.168.10.126
+rabbitmq-hostname=localhost
 rabbitmq-username=service@crm.com.tw
 rabbitmq-password=info@1111
