--- a/ChannelForSimulation/pom.xml
+++ b/ChannelForSimulation/pom.xml
@@ -194,7 +194,15 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <optional>true</optional>
 		</dependency>
-
+		
+		<!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
+		<dependency>
+		    <groupId>commons-configuration</groupId>
+		    <artifactId>commons-configuration</artifactId>
+		    <version>1.6</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 
