--- a/ChannelForSimulation/src/main/resources/application.properties
+++ b/ChannelForSimulation/src/main/resources/application.properties
@@ -18,17 +18,17 @@ mapProp.queueName: BACKEND_TO_VOICE_QUEUE
 
 ## BACKEND ##
 mapProp.BACKEND_protocol=http
-mapProp.BACKEND_hostname=192.168.10.126
+mapProp.BACKEND_hostname=localhost
 mapProp.BACKEND_port=8080
 mapProp.BACKEND_project=BackendService
 
 ## Info360WebAPI ##
 mapProp.RESTful_protocol=http
-mapProp.RESTful_hostname=192.168.10.126
+mapProp.RESTful_hostname=localhost
 mapProp.RESTful_port=8080
 mapProp.RESTful_project=Info360WebAPI
 
 ## rabbitmq server ##
-rabbitmq-hostname=192.168.10.126
+rabbitmq-hostname=localhost
 rabbitmq-username=service@crm.com.tw
 rabbitmq-password=info@1111
