--- a/ChannelForSimulation/src/main/resources/version.properties
+++ b/ChannelForSimulation/src/main/resources/version.properties
@@ -1,5 +1,5 @@
-backend: d2222
-web_channel: e39381
-info360: ac2132
-webapi: w29128
-simulation: s02019
+backend: d4bf857
+web_channel: dd7dc9c
+info360: d0ebbee
+webapi: 0077d36
+simulation: 9c9613e
